# hitl-mcp

./: .env.example  .gitignore  .gitmodules  .uvrc  CLAUDE.md  CODE_REVIEW.md  DATABASE_MIGRATION.md  HOW_TO_SEND_FILE.md  README.md  add_file_support.patch  deploy_hil.sh  migrate_forward_config.py  pyproject.toml  requirements.txt  send_file_simple.py  send_file_test.py  send_markdown_example.py  test_document.md  test_send_file.py  test_send_file_devg.py
.a2a/: api-keys.json
.github/workflows/: deploy-docs.yml  publish-hitl-mcp.yml  release-hitl-server.yml
db_backup/: forward_service_dev.db
devcloud_service/: __init__.py  app.py  config.py  storage.py
devcloud_service/handlers/: __init__.py  callback.py  poll.py  send.py
devcloud_worker/: config.py  sender.py  worker.py
docs/: API.md  DATABASE_MIGRATION.md  DATABASE_SUMMARY.md  DEPLOYMENT.md  DEPLOY_BOT_MANAGEMENT.md  FILE_SENDING_SUMMARY.md  HITL-Walle推广文章.md  PRO_DEPLOYMENT.md  PRO_DEPLOYMENT_V2.md  SHARED_POLLING_BACKEND_DESIGN.md  multi-tenant-design.md
docs-site/: index.md  package.json
docs-site/.vitepress/: config.ts
docs-site/engines/: ilink.md  (+1 more)
forward_service/: app.py  config.py  config_db.py  config_v2.py  models.py  repository.py  sender.py
hil_server/: app.py  config.py  ws_manager.py
mcp_server/: __init__.py  config.py  server.py  wecom_client.py
mcp_server_ts/: LICENSE  package.json  pnpm-lock.yaml  publish.sh  test-mcp-config.json
scripts/: deploy.sh  start_hil_server.sh  sync_to_pro.sh
tests/: __init__.py  test_db_integration.py
website/: docs.html  index.html
(+33 files in other folders)
