[project]
name = "hil-mcp"
version = "0.1.0"
description = "Human-in-the-Loop MCP for WeCom (企业微信) via 飞鸽传书"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
hil-mcp = "mcp_server.server:main"
hil-devcloud = "devcloud_service.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server", "devcloud_service"]
